--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
             <h1>TCC Mewtwo</h1>    
         </div>
         <div class="links">
-            <a href="#">home</a>
-            <a href="#">mewtwo</a>
-            <a href="#">equipe</a>
-            <a href="#">detalhamentos</a>
-            <a href="#">rodap</a>
+            <a href="#section1">home</a>
+            <a href="#section2">mewtwo</a>
+            <a href="#section3">equipe</a>
+            <a href="#section4">detalhamentos</a>
+            <a href="#footer">rodapé</a>
         </div>
     </header>
 
-    <section class="section1">
+    <section class="section1" id="section1">
         <div class="texto">
             <h1>APP E WEB SITE <br>PARA <br>CLINICA<br>ODONTOLOGICA</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elementum dolor ipsum, sed cursus lectus gravida sed.</p>
         </div>
 
         <img src="img/celular-com-fundo.png" alt="">
-        <img src="img/notebook-com-fundo.png" alt="">
+        <img src="img/notebook-com-fundo1.png" alt="">
     </section>
 
-    <section class="section2">
+    <section class="section2" id="section2">
         <div class="conteudo">
             <div class="texto">
                 <h1>Por que mewtwo ?</h1>
@@ -48,19 +48,79 @@
         </div>
     </section>
 
-    <section class="section3">
+    <section class="section3" id="section3">
         <h1>Equipe</h1>
         <div class="integrantes">
-            <div class="fotos"></div>
-            <div class="fotos"></div>
-            <div class="fotos"></div>
-            <div class="fotos"></div>
-            <div class="fotos"></div>
-            <div class="fotos"></div>
+            <div class="fotos">
+                <img src="img/santos.png" alt="">
+                <div class="info">
+                    <h1>Santos F.C</h1>
+                    <div class="redes">
+                        <img src="img/Instagram.png" alt="">
+                        <img src="img/LinkedIn.png" alt="">
+                        <img src="img/Github.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="fotos">
+                <img src="img/santos.png" alt="">
+                <div class="info">
+                    <h1>Santos F.C</h1>
+                    <div class="redes">
+                        <img src="img/Instagram.png" alt="">
+                        <img src="img/LinkedIn.png" alt="">
+                        <img src="img/Github.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="fotos">
+                <img src="img/santos.png" alt="">
+                <div class="info">
+                    <h1>Santos F.C</h1>
+                    <div class="redes">
+                        <img src="img/Instagram.png" alt="">
+                        <img src="img/LinkedIn.png" alt="">
+                        <img src="img/Github.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="fotos">
+                <img src="img/santos.png" alt="">
+                <div class="info">
+                    <h1>Santos F.C</h1>
+                    <div class="redes">
+                        <img src="img/Instagram.png" alt="">
+                        <img src="img/LinkedIn.png" alt="">
+                        <img src="img/Github.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="fotos">
+                <img src="img/santos.png" alt="">
+                <div class="info">
+                    <h1>Santos F.C</h1>
+                    <div class="redes">
+                        <img src="img/Instagram.png" alt="">
+                        <img src="img/LinkedIn.png" alt="">
+                        <img src="img/Github.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="fotos">
+                <img src="img/santos.png" alt="">
+                <div class="info">
+                    <h1>Santos F.C</h1>
+                    <div class="redes">
+                        <img src="img/Instagram.png" alt="">
+                        <img src="img/LinkedIn.png" alt="">
+                        <img src="img/Github.png" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
-    <section class="section4">
+    <section class="section4" id="section4">
         <div class="content">
             <img src="img/celular-com-fundo.png" alt="">
             <div class="texto">
@@ -84,7 +144,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer id="footer">
         <div class="footer">
             <div class="logo">
                 <img src="img/mewtwo.png" alt="">
@@ -112,10 +172,10 @@
             <div class="links">
                 <h1>Links rápidos</h1>
                 <div class="navegacao">
-                    <a href="#">home</a>
-                    <a href="#">mewtwo</a>
-                    <a href="#">equipe</a>
-                    <a href="#">detalhamento</a>
+                    <a href="#section1">home</a>
+                    <a href="#section2">mewtwo</a>
+                    <a href="#section3">equipe</a>
+                    <a href="#section4">detalhamentos</a>
                 </div>
             </div>
         </div>
