--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" 
     integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" /><!--Link para icones-->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Exo+2&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="img/mewtwo.png" alt="">
-            <h1>TCC Mewtwo</h1>    
-        </div>
-        <div class="links">
-            <a href="#section1">home</a>
-            <a href="#section2">mewtwo</a>
-            <a href="#section3">equipe</a>
-            <a href="#section4">detalhamentos</a>
-            <a href="#footer">rodapé</a>
+        <div class="content">
+            <div class="logo">
+                <img src="img/mewtwo.png" alt="">
+                <h1>TCC Mewtwo</h1>    
+            </div>
+            <div class="links">
+                <a href="#section1">home</a>
+                <a href="#section2">mewtwo</a>
+                <a href="#section3">equipe</a>
+                <a href="#section4">detalhamentos</a>
+                <a href="#footer">rodapé</a>
+            </div>
         </div>
     </header>
 
@@ -186,10 +192,10 @@
             <div class="social">
                 <h1>Mídias sociais</h1>
                 <div class="icones">
-                    <img src="img/Facebook.png" alt="">
-                    <img src="img/Instagram.png" alt="">
-                    <img src="img/LinkedIn.png" alt="">
-                    <img src="img/Github.png" alt="">
+                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
                 </div>
             </div>
 
