--- a/index.html
+++ b/index.html
@@ -9,36 +9,43 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" 
     integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" /><!--Link para icones-->
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Exo+2&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div class="content">
-            <div class="logo">
+        <nav class="navegacao">
+            <a href="#" class="logo">
                 <img src="img/mewtwo.png" alt="">
                 <h1>TCC Mewtwo</h1>    
+            </a>
+            <div class="menu-navegacao">
+                <a href="#section1" class="links">home</a>
+                <a href="#section2" class="links">mewtwo</a>
+                <a href="#section3" class="links">equipe</a>
+                <a href="#section4" class="links">detalhamentos</a>
+                <a href="#footer" class="links">rodapé</a>
             </div>
-            <div class="links">
-                <a href="#section1">home</a>
-                <a href="#section2">mewtwo</a>
-                <a href="#section3">equipe</a>
-                <a href="#section4">detalhamentos</a>
-                <a href="#footer">rodapé</a>
-            </div>
-        </div>
-    </header>
 
+            <div class="hamburguer">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
+    </header>
+    <script src="js/script.js"></script>
+    
     <section class="section1" id="section1">
         <div class="texto">
             <h1>APP E WEB SITE <br>PARA <br>CLINICA<br>ODONTOLOGICA</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elementum dolor ipsum, sed cursus lectus gravida sed.</p>
         </div>
-
-        <img src="img/celular-com-fundo.png" alt="">
-        <img src="img/notebook-com-fundo1.png" alt="">
+        <div class="imagens">
+            <img src="img/celular-com-fundo.png" alt="">
+            <img src="img/notebook-com-fundo2.png" alt="">
+        </div>
     </section>
 
     <section class="section2" id="section2">
@@ -156,6 +163,83 @@
                 </div>
             </div>
         </div>
+        <div class="integrante">
+            <img src="img/notebook-com-fundo1.png" alt="">
+            <div class="content">
+                <h2>Luiz Fernando Pegorari</h2>
+                <span>Desenvolvedor web<br>Análista de banco</span>
+                <ul class="social_icons">
+                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="integrante">
+            <img src="img/notebook-com-fundo1.png" alt="">
+            <div class="content">
+                <h2>Luiz Fernando Pegorari</h2>
+                <span>Desenvolvedor web<br>Análista de banco</span>
+                <ul class="social_icons">
+                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="integrante">
+            <img src="img/notebook-com-fundo1.png" alt="">
+            <div class="content">
+                <h2>Luiz Fernando Pegorari</h2>
+                <span>Desenvolvedor web<br>Análista de banco</span>
+                <ul class="social_icons">
+                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="integrante">
+            <img src="img/notebook-com-fundo1.png" alt="">
+            <div class="content">
+                <h2>Luiz Fernando Pegorari</h2>
+                <span>Desenvolvedor web<br>Análista de banco</span>
+                <ul class="social_icons">
+                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="integrante">
+            <img src="img/notebook-com-fundo1.png" alt="">
+            <div class="content">
+                <h2>Luiz Fernando Pegorari</h2>
+                <span>Desenvolvedor web<br>Análista de banco</span>
+                <ul class="social_icons">
+                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="integrante">
+            <img src="img/notebook-com-fundo1.png" alt="">
+            <div class="content">
+                <h2>Luiz Fernando Pegorari</h2>
+                <span>Desenvolvedor web<br>Análista de banco</span>
+                <ul class="social_icons">
+                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+        </div>
     </section>
 
     <section class="section4" id="section4">
@@ -219,6 +303,47 @@
         </div>
 
         <p id="autoral">© Copyright 2022, TCC Mewtwo - Todos direitos reservados</p>
+    </footer>
+    <!--GAMBIARRA DO CARALHO-->
+    <footer id="footer2">
+        <div class="footer">
+            <div class="logo">
+                <img src="img/mewtwo-big.png" alt="">
+                <p>TCC Mewtwo</p>
+                <div class="barra"></div>
+            </div>
+
+            <div class="flex">
+                <div class="social">
+                    <h1>Mídias sociais</h1>
+                    <div class="icones">
+                        <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+
+                <div class="contato">
+                    <h1>Contato</h1>
+                    <p>R. Alcântara, 113</p>
+                    <p>Vila Guilherme,</p>
+                    <p> São Paulo - SP</p>
+                    <p>(11) 2905-1128</p>
+                    <p>mewtwotcc@gmail.com</p>
+                </div>
+            </div>
+            <div class="links">
+                <h1>Links rápidos</h1>
+                <div class="navegacao">
+                    <a href="#section1">home</a>
+                    <a href="#section2">mewtwo</a>
+                    <a href="#section3">equipe</a>
+                    <a href="#section4">detalhamentos</a>
+                </div>
+            </div>
+            <p id="autoral">© Copyright 2022, TCC Mewtwo - Todos direitos reservados</p>
+        </div>
     </footer>
 </body>
 </html>
